@@ -1,0 +1,3 @@
+Given /^I set the environment variable "(\w+)" to "([^"]*)"$/ do |var, value|
+  ENV[var] = value
+end
